--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@
     position:absolute;
     z-index: 500;
     border-bottom: 1px solid #fff;
-    padding: 10px;
+    padding: 5px 10px;
     background: #0005;
     color:#fff;
     .fs_search{
@@ -64,7 +64,7 @@
             top:100%;
             left: 0%;
             list-style: none;
-            background-color: $primary-col-light;
+            background-color: $primary-col;
             margin: 0px;
             padding: 0px;
             text-align: center;
@@ -106,17 +106,18 @@
         }
     }
 }
+.fs_header.fs_header_sticky{
+    position:fixed;
+    background-color: $primary-col;
+    border: none;
+    box-shadow: 0px 0px 5px 2px $primary-col-light;
+}
 .offcanvas-start{
     max-width: 250px !important;
     background: $primary-col !important;
 }
 .offcanvas-end{
     max-width: 250px !important;
-}
-.fs_header.fs_header_sticky{
-    position:fixed;
-    background-color: $primary-col;
-    border: none;
 }
 @media screen and (max-width:770px) {
     .fs_header{
