--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@
     position:absolute;
     z-index: 500;
     border-bottom: 1px solid #fff;
-    padding: 5px 10px;
+    padding: 10px;
     background: #0005;
     color:#fff;
     .fs_search{
