--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -3,7 +3,7 @@
 .fs_book{
     background-color: $card-background !important;
     cursor: pointer;
-    
+    box-shadow: 0px 0px 3px 1px $primary-col;
     &:hover{
         box-shadow: 0px 0px 10px 1px $primary-col;
         border: none;
