about us and cart

--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -12,3 +12,9 @@
         font-family: $secondary-font-family;
     }
 }
+.fs_book.fs_cart{
+    border: none;
+    box-shadow: none;
+    background-color: transparent;
+    
+}
