--- a/src/components/Utilities/utilities.scss
+++ b/src/components/Utilities/utilities.scss
@@ -12,6 +12,10 @@
         cursor: pointer;
     }
 }
+.fs_button.disabled{
+    color:#fff !important;
+    background-color: rgb(170, 169, 169) !important;
+}
 .fs_button.primary.filled{
     background-color: $primary-col;
     color:$secondary-text-col;
