--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -4,12 +4,24 @@
     background-color: $card-background !important;
     cursor: pointer;
     box-shadow: 0px 0px 3px 1px $primary-col;
+    overflow: hidden;
     &:hover{
         box-shadow: 0px 0px 10px 1px $primary-col;
         border: none;
     }
     h5{
         font-family: $secondary-font-family;
+    }
+    .fs_delivery_free{
+        position: absolute;
+        top:-100px;
+        color:#fff;
+        background-color: #9b1c31;
+        padding: 3px;
+        font-size: 0.7rem;
+        width: 400px;
+        transform: rotateZ(-45deg) translate(-50%,-100%);
+        text-align: center;
     }
 }
 .fs_book.fs_cart{
