--- a/src/components/Utilities/utilities.scss
+++ b/src/components/Utilities/utilities.scss
@@ -20,6 +20,7 @@
     background-color: $primary-col;
     color:$secondary-text-col;
     box-shadow: 0px 0px 3px 1px $primary-col;
+    border: 2px solid transparent;
     &:hover{
         color:$primary-col;
         background-color: transparent;
