--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -5,9 +5,10 @@
     cursor: pointer;
     box-shadow: 0px 0px 3px 1px $primary-col;
     overflow: hidden;
+    border: none;
+    border-radius: 10px !important;
     &:hover{
         box-shadow: 0px 0px 10px 1px $primary-col;
-        border: none;
     }
     h5{
         font-family: $secondary-font-family;
@@ -23,7 +24,29 @@
         transform: rotateZ(-45deg) translate(-50%,-100%);
         text-align: center;
     }
+    .fs_added{
+        position: absolute;
+        z-index: 3;
+        top: 0px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        background-color: #0004;
+        display: flex;
+        transition-duration: 300ms;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+        .fs_added_icon{
+            font-size: 6rem;
+            color:$primary-col;
+        }
+    }
+    .fs_added.hidden{
+        display: none;
+    }
 }
+
 .fs_book.fs_cart{
     border: none;
     box-shadow: none;
