--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -1,9 +1,9 @@
 $primary-col:#031F30;
-$primary-col-light:#031F30AA;
+$primary-col-light:#031F3088;
 $secondary-col: #EBA83A;
 $primary-text-col:#000000;
 $secondary-text-col: #ffffff;
 $background: #ffffff;
-$card-background:#F4F4F2;
+$card-background:#fdfdfa;
 $font-family:  'Roboto', sans-serif;
 $secondary-font-family: 'Playfair Display', serif;
