--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,11 @@
 .fs_footer{
     background-color: #171717;
     color:$secondary-text-col;
+    clear: both;
+    position: relative;
     padding: 10px;
+    max-width: 100vw;
+    overflow: hidden;
     .fs_footer_cols{
         text-align: center;
         li{
