--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -1,30 +1,34 @@
 @import "../../_globals.scss";
 
-.fs_book{
+.fs_book {
     background-color: $card-background !important;
     cursor: pointer;
-    box-shadow: 0px 0px 3px 1px $primary-col;
+    box-shadow: 0px 0px 3px 1px $primary-col-light;
     overflow: hidden;
     border: none;
     border-radius: 10px !important;
-    &:hover{
-        box-shadow: 0px 0px 10px 1px $primary-col;
+
+    &:hover {
+        box-shadow: 0px 0px 3px 2px $primary-col;
     }
-    h5{
+
+    h5 {
         font-family: $secondary-font-family;
     }
-    .fs_delivery_free{
+
+    .fs_delivery_free {
         position: absolute;
-        top:-100px;
-        color:#fff;
+        top: -100px;
+        color: #fff;
         background-color: #9b1c31;
         padding: 3px;
         font-size: 0.7rem;
         width: 400px;
-        transform: rotateZ(-45deg) translate(-50%,-100%);
+        transform: rotateZ(-45deg) translate(-50%, -100%);
         text-align: center;
     }
-    .fs_added{
+
+    .fs_added {
         position: absolute;
         z-index: 3;
         top: 0px;
@@ -37,19 +41,40 @@
         align-items: center;
         justify-content: center;
         font-size: 3rem;
-        .fs_added_icon{
+
+        .fs_added_icon {
             font-size: 6rem;
-            color:$primary-col;
+            color: $primary-col;
         }
     }
-    .fs_added.hidden{
+
+    .fs_added.hidden {
         display: none;
+    }
+
+    .fs_book_transition-enter {
+        opacity: 0.01;
+    }
+
+    .fs_book_transition-enter.fs_book_transition-enter-active {
+        opacity: 1;
+        transition: opacity 500ms ease-in;
+    }
+
+    .fs_book_transition-leave {
+        opacity: 1;
+    }
+
+    .fs_book_transition-leave.fs_book_transition-leave-active {
+        opacity: 0.01;
+        transition: opacity 300ms ease-in;
     }
 }
 
-.fs_book.fs_cart{
+.fs_book.fs_cart {
     border: none;
     box-shadow: none;
     background-color: transparent;
-    
+    border-radius: 0px !important;
+    border-bottom: 1px solid $primary-col;
 }
