--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,8 @@ body {
     color: $primary-text-col;
     font-family: $font-family;
     overflow-x: hidden;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 h1,h2,h3,h4{
     font-family: $secondary-font-family;
@@ -49,9 +51,25 @@ h1,h2,h3,h4{
 
 .view_page{
     padding-top: 10vh;
+    min-height: 90vh;
 }
 @media screen and (max-height:500px){
     .view_page{
         padding-top: 20vh;
     }
 }
+
+.fade-enter {
+    opacity: 0;
+  }
+  .fade-enter-active {
+    opacity: 1;
+    transition: opacity 1000ms;
+  }
+  .fade-exit {
+    opacity: 1;
+  }
+  .fade-exit-active {
+    opacity: 0;
+    transition: opacity 1000ms;
+  }
