--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,7 @@
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
     color: inherit !important;
     a:hover{
         color:inherit;
