--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -1,4 +1,5 @@
-$primary-col:#031F30;
+// $primary-col:#031F30;
+$primary-col:#132743;
 $primary-col-light:#031F3088;
 $secondary-col: #EBA83A;
 $primary-text-col:#000000;
