--- a/src/components/ViewBook/view_book.scss
+++ b/src/components/ViewBook/view_book.scss
@@ -3,10 +3,10 @@
 .fs_book {
     background-color: $card-background !important;
     cursor: pointer;
-    box-shadow: 0px 0px 3px 1px $primary-col-light;
+    box-shadow: 0px 0px 1px 1px $primary-col;
     overflow: hidden;
     border: none;
-    border-radius: 10px !important;
+    border-radius: 5px !important;
 
     &:hover {
         box-shadow: 0px 0px 3px 2px $primary-col;
