--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 a {
     text-decoration: none !important;
     color: inherit !important;
+    cursor: pointer;
     a:hover{
         color:inherit;
     }
