--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -8,9 +8,8 @@
     max-width: 100vw;
     overflow: hidden;
     .fs_footer_cols{
-        text-align: center;
-    
         h3{
+            padding-left: 20px;
             border-bottom: 2px solid #fff;
             padding-bottom: 2px;
         }
@@ -18,7 +17,10 @@
             list-style: none;
             cursor: pointer;
         }
-        margin:3px 2px;
+        img{
+            aspect-ratio: 1;
+        }
+        margin:3px 10px;
 
     }
 }
