--- a/src/components/SectionTitle/sectiontitle.scss
+++ b/src/components/SectionTitle/sectiontitle.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     h2{
         padding: 5px 10px;
-        border: 5px solid #fff;
+        border: 5px solid transparent;
         border-top: 5px solid $secondary-col;
         border-bottom: 5px solid $secondary-col;
         font-family: $secondary-font-family;
@@ -16,7 +16,7 @@
         cursor: pointer;
         transition-duration: 1s;
         &:hover{
-            border: 5px solid #fff;
+            border: 5px solid transparent;
             border-left: 5px solid $secondary-col;
             border-right: 5px solid $secondary-col;
         }
