--- a/src/_globals.scss
+++ b/src/_globals.scss
@@ -1,10 +1,15 @@
 // $primary-col:#031F30;
 $primary-col:#132743;
+$primary-col:#1A2238;
 $primary-col-light:#031F3088;
-$secondary-col: #EBA83A;
+$primary-light:#3a559e;
+$tertiary-col: #EBA83A;
+$secondary-col:#9b1c31;
+$secondary-light:#df3b56;
 $primary-text-col:#000000;
 $secondary-text-col: #ffffff;
-$background: #ffffff;
-$card-background:#fdfdfa;
+$card-background:#f8f8f8;
+$background: #e7e7e7;
 $font-family:  'Roboto', sans-serif;
+$font-family: 'Noto Serif KR', serif;
 $secondary-font-family: 'Playfair Display', serif;
