--- a/src/components/Utilities/utilities.scss
+++ b/src/components/Utilities/utilities.scss
@@ -6,7 +6,7 @@
     padding: 2px 10px;
     font-size: 1rem;
     transition-duration: 100ms;
-    margin: 0px 5px;
+    margin: 0px 0px;
     border-radius: 10px;
     &:hover{
         cursor: pointer;
@@ -14,17 +14,23 @@
 }
 .fs_button.disabled{
     color:#fff !important;
-    background-color: rgb(87, 87, 223) !important;
+    background: #1A2238 !important;
+    &:hover{
+        box-shadow: none;
+    }
 }
 .fs_button.primary.filled{
-    background-color: $primary-col;
+    background:linear-gradient(45deg,#1A2238,#4662af);
     color:$secondary-text-col;
+    background-color: $primary-col;
     box-shadow: 0px 0px 1px 1px $primary-col;
     border: 2px solid transparent;
     &:hover{
-        color:$primary-col;
-        background-color: transparent;
-        border: 2px solid $primary-col;
+        color:$secondary-text-col;
+        background-color: $secondary-col;
+        background:linear-gradient(45deg,#9b1c31,#df3b56);
+        // border: 2px solid $secondary-col;
+        box-shadow: 0px 0px 1px 1px $secondary-col;
     }
 }
 .fs_button.primary.outlined{
