--- a/src/components/BillingCard/billingcard.scss
+++ b/src/components/BillingCard/billingcard.scss
@@ -1,10 +1,12 @@
 @import '../../globals.scss';
 .fs_billing_card{
-    margin: 20px auto;
+    margin: 10px 5px;
     padding: 10px;
     box-shadow: 0px 0px 3px 1px $primary-col;
     border-radius: 30px;
+    background-color: #fff;
     max-width: 800px;
+    color: $primary-col;
     position: relative;
     &:hover{
         cursor: pointer;
