--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -11,7 +11,7 @@
     .fs_navbar{
         width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: start;
     }
     .fs_search{
         background: #fff;
@@ -26,19 +26,16 @@
         .fs_search_btn{
             cursor: pointer;
         }
-        input{
-            outline: none;
-            border: none;
-            padding: 2px;
-            width: 100%;
-        }
         &:hover{
             transform: scale(105%);
         }
     }
+    .fs_logo_link{
+        justify-content: start;
+    }
     .fs_logo_text{
         font-family: 'Pacifico', cursive;
-        font-size: 2rem;
+        font-size: 26px;
         color: $tertiary-col;
         text-shadow: 1px 1px 5px $secondary-col;
     }
@@ -54,7 +51,7 @@
     }
     .fs_menu{
         padding: 0px 0px;
-        font-size:1rem;
+        font-size:15px;
         div{
             margin: 0px 5px;
             cursor: pointer;
@@ -64,12 +61,9 @@
             }
         }
     }
-    .fs_menu_btn{
+    .fs_menu_avatar{
         display: none;
-        .fs_menu_avatar{
-            background-color: $tertiary-col;
-            transform: scale(80%);
-        }
+        background-color: $tertiary-col;
     }
     .fs_dropdown{
         position: relative;
@@ -174,27 +168,61 @@
 .offcanvas-end{
     max-width: 250px !important;
 }
-
-@media screen and (max-width:770px) {
+@media screen and (max-width:1200px) and (min-width:800px) {
+    .fs_header{
+        .fs_logo_wrapper{
+            justify-content: center;
+        }
+        .fs_menu{
+            font-size: 14px;
+        }
+        .fs_avatar{
+            transform: scale(70%);
+        }
+        .fs_logo_text{
+            font-size: 20px;
+            text-align: center;
+        }
+        .fs_logo{
+            text-align: center;
+            width: 40px;
+            height: 40px;
+        }
+        .fs_logo_link{
+            justify-content: center;
+        }
+    }
+}
+@media screen and (max-width:800px) {
     .fs_header{
         .fs_menu{
             display: none;
         }
-        .fs_menu_btn{
-            display: block;
+        .fs_menu_avatar{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0px 10px;
         }
         .fs_avatar{
-            transform: scale(80%);
-            margin: 0px 2px;
+            margin: 0px 10px;
         }
         .fs_logo{
             width: 50px;
             height: 50px;
             position: relative;
+            text-align: center;
         }
         .fs_logo_wrapper{
-            display: block;
             width: 100%;
+            text-align: center;
+            justify-content: center;
+        }
+        .fs_icon_holder{
+            width: 100%;
+        }
+        .fs_logo_link{
+            justify-content: center;
         }
         .fs_search{
             min-width: 40vw;
